[project]
name = "web_to_JP_markdown"
version = "0.1.0"
description = "A tool to convert web content to Japanese markdown"
authors = [
    { name = "Yoshihiro Matsuo", email = "matsuoyoshihiro0426@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "markdownify",
    "mcp[cli]>=1.9.4",
    "httpx>=0.28.1",
]
[tool.ruff]
# 行の長さを79文字に制限
line-length = 79

# Python互換性の設定
target-version = "py310"

[tool.ruff.lint]
# Lintの基本ルールセット
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.format]
# 引用符のスタイル: ダブルクォート
quote-style = "double"
# インデントはスペース4つ
indent-style = "space"
